--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,10 +5,16 @@ include: package:pedantic/analysis_options.yaml
 
 # For lint rules and documentation, see http://dart-lang.github.io/linter/lints.
 # Uncomment to specify additional rules.
-# linter:
-#   rules:
+linter:
+  rules:
+    info:
+      - prefer_double_quotes
+
 #     - camel_case_types
 
 analyzer:
+  errors:
+    - unused_local_variable: info
+
 #   exclude:
 #     - path/to/excluded/files/**
