Made it possible to run the tests through a watcher

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -16,5 +16,7 @@ analyzer:
   errors:
     - unused_local_variable: info
 
+enable-experiment:
+  - extension-methods
 #   exclude:
 #     - path/to/excluded/files/**
