--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,10 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  path: ^1.6.0
-  watcher: ^0.9.7+15
-  ansicolor: ^1.0.2
+  path: ^1.8.0
+  watcher: ^1.0.0
+  ansicolor: ^2.0.1
 
 dev_dependencies:
-  pedantic: ^1.9.0
-  test: ^1.14.3
+  pedantic: ^1.11.1
+  test: ^1.17.12
