--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: dart_koans
 description: A sample command-line application.
 version: 0.0.2
 homepage: https://github.com/md-weber/dart_koans
-author: Max Weber <info@flutterexplained.live>
+author: Max Weber <flutterexp+github@gmail.com>
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
